    - In advanced preferences, display preferences options for non-boolean
      settings (AZAWAWI) 
    - In advanced preferences, display a True/False radio button for boolean
      settings (AZAWAWI)
    - Fixed an incorrect default value display bug in advanced preferences
      when it is toggled (AZAWAWI)
    - In advanced preferences, hide bottom controls at startup (AZAWAWI)
    - Fixed ticket #858 Recent files does not display anything on Padre startup
      (AZAWAWI)
    - Refresh all menus at startup. This prevents "nothing" open mode (i.e. no
      document) from incorrectly showing an enabled menubar (AZAWAWI)
    - Padre::Util::share() can now get the name of a plugin (e.g. 'Perl6') and
      return the share directory of that plugin (SZABGAB)
    - Removed the unused concept of user-configurable menus, which was slowing
      down a ton of different operations that needed a menu refresh (ADAMK)
    - Removed ->refresh calls during the initial menu construction, as we
      will be refresh'ing again anyway at the end of the startup, and thus
      any work done in the menus is completely wasted CPU (ADAMK)
    - Removed the very expensive window list refresh code from the main menu
      refresh method into it's own dedicated refresh method. We can fire
      this directly in the limited number of situations that the notebook
      adds, removed, or renamed documents (ADAMK)

0.57 2010.02.18 - **WARNING Contains new threading code**
    - Spawn a master thread very early in the startup process. Use that
      master to create worker threads as necessary. Cuts down on memory
      usage and fixes the "Leaked Scalars" warning (BRAMBLE, SMUELLER)
    - Fix pluginmanager error dialog for plugin-event failure (BRAMBLE)
    - Add status messages for Padre::File operations (SEWI)
    - Select some files to close (SEWI)
    - Select some files to reload (SEWI)
    - GotoLine is now called Goto dialog (AZAWAWI)